test/files/neg/quasiquotes_syntaxerrors_qq5.scala
object Test extends App {
  println(s"${}")
  println(s"${  }")
  println(s"${}bar")
  println(s"${ }bar")
  println(s"qwe${}")
  println(s"qwe${   }")
  println(s"qwe${}bar")
  println(s"qwe${ }bar")
}